--- a/ForstForward/v5/Changelog.txt
+++ b/ForstForward/v5/Changelog.txt
@@ -1,7 +1,10 @@
 Mechanics:
 	- added levels
 	- adjusted actions to no longer be random in strength
+		- they now sit on the lower end of the previous range
 	- adjusted a few action scalings
+		- druid and treant spawn count does not scale anymore
+		- plant scales 50% slower
 
 Bug fixes & QoL:
 	- fixed: records were not displayed properly after win/loss
